# TEST-tetris

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml
assets/fonts/: README.md
scripts/: build_exe.bat  build_exe.sh  build_exe_debug.bat  tetris.spec
src/frameworks/: pyqt_example.py  tkinter_example.py
src/tetris_game/: __init__.py  game_engine.py  main.py
tests/: conftest.py  test_game_engine.py
