[metadata]
name = tetris-game
version = 1.0.0
description = Pythonで作成されたテトリスゲーム
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/example/tetris-game
author = Claude Code
author_email = noreply@anthropic.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Games/Entertainment :: Puzzle Games

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    pygame>=2.5.2
    Pillow>=10.2.0
    requests>=2.31.0
    pydantic>=2.5.3
    python-dotenv>=1.0.0

[options.packages.find]
where = src

[options.extras_require]
gui =
    customtkinter>=5.2.2
    PyQt6>=6.6.1
    tkinter-modern>=0.2.1
dev =
    pytest>=7.4.4
    pytest-cov>=4.1.0
    flake8>=7.0.0
    mypy>=1.8.0
    black>=23.12.1
    isort>=5.13.2
    pytest-mock>=3.12.0
    pytest-asyncio>=0.23.3
build =
    pyinstaller>=6.3.0
    cx-Freeze>=6.15.16
    auto-py-to-exe>=2.43.1
data =
    numpy>=1.26.3
    pandas>=2.2.0

[options.entry_points]
console_scripts =
    tetris = tetris_game.main:main

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .venv,
    venv